1.7.0dev
 - Updates to old manual for publishing on fenics-ufl.readthedocs.org
 - Bugfix for ufl files with utf-8 encoding
 - Bugfix in conditional derivatives, currently must be manually enabled for compatibility
 - Allow sum([expressions]) where expressions are nonscalar by defining expr+0==expr
 - Allow form=0; form -= other;
 - Deprecate .cell(), .domain(), .element() in favour of .ufl_cell(),
	.ufl_domain(), .ufl_element(), in multiple classes, to allow
	closer integration with dolfin.
 - Remove deprecated properties cell.{d,x,n,volume,circumradius,facet_area}.
 - Remove ancient form2ufl script
 - Add new class Mesh to replace Domain
 - Add new class FunctionSpace(mesh, element)
 - Make FiniteElement classes take Cell, not Domain.
 - Large reworking of symbolic geometry pipeline
 - Implement symbolic Piola mappings
1.6.0 [2015-07-28]
 - Change approach to attaching __hash__ implementation to accomodate python 3
 - Implement new non-recursive traversal based hash computation
 - Allow derivative(M, ListTensor(<scalars>), ...) just like list/tuple works
 - Add traits is_in_reference_frame, is_restriction, is_evaluation, is_differential
 - Add missing linear operators to ArgumentDependencyExtractor
 - Add _ufl_is_literal_ type trait
 - Add _ufl_is_terminal_modifier_ type trait and Expr._ufl_terminal_modifiers_ list
 - Add new types ReferenceDiv and ReferenceCurl
 - Outer product element support in degree estimation
 - Add TraceElement, InteriorElement, FacetElement, BrokenElement
 - Add OuterProductCell to valid Real elements
 - Add _cache member to form for use by external frameworks
 - Add Sobolev space HEin
 - Add measures dI,dO,dC for interface, overlap, cutcell
 - Remove Measure constants
 - Remove cell2D and cell3D
 - Implement reference_value in apply_restrictions
 - Rename point integral to vertex integral and kept *dP syntax
 - Replace lambda functions in ufl_type with named functions for nicer
   stack traces